python-classifier/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: afval-alert-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: afval-alert.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: afval-alert-service
            port:
              number: 80
